# ml2_takehome

./: .gitignore  CMakeLists.txt  Dockerfile.train_server  README.md  build.sh  docker-compose.yml  mnist.cpp
airflow_server/: Dockerfile  variables.json
airflow_server/dags/: lenet5_benchmark.py
airflow_server/script/: entrypoint.sh
inference_server/: tfs.sh  ts.sh
model-store/: model.pt
models/libtorch/: lenet5.mar  lenet5_libtorch.mar  mar.sh  mnist_handler.py  model.pt
models/pytorch/: lenet5_pytorch.mar  model.pt
models/tensorflow/0001/: saved_model.pb
models/tensorflow/0002/variables/: variables.index
models/tensorflow/20200910/: saved_model.pb
models/tensorflow/20200910/variables/: variables.index
notebook/: lenet5_benchmark.ipynb
notebook/.ipynb_checkpoints/: lenet5_benchmark-checkpoint.ipynb
train_server/: CMakeLists.txt  Dockerfile  build.sh  run.sh
train_server/app/: CMakeLists.txt  lenet5_libtorch.cpp  lenet5_pytorch.py  lenet5_pytorch.py.back  lenet5_tensorflow.py  requirements.txt
train_server/app/lenet5_libtorch/: CMakeCache.txt  Makefile  build.sh  cmake_install.cmake  lenet5_libtorch  main
train_server/app/src/: lenet5_libtorch.cpp  lenet5_libtorch.hpp
train_server/models/libtorch/: model.pt
train_server/models/tensorflow/0001/variables/: variables.data-00000-of-00001
train_server/models/tensorflow/0002/: saved_model.pb
train_server/models/tensorflow/0002/variables/: variables.data-00000-of-00001
train_server/models/tensorflow/variables/: variables.index
train_server/src/: lenet5_libtorch.cpp  lenet5_libtorch.hpp
